--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "change-case": "^4.1.2",
+    "iconify": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-helmet-async": "^1.3.0",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
+    "simplebar-react": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@iconify/react": "^4.0.0"
   }
 }
