--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-helmet-async": "^1.3.0",
-    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views-react-18-fix": "^0.14.1",
@@ -53,6 +52,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
-    "@iconify/react": "^4.0.0"
+    "@iconify/react": "^4.0.0",
+    "video.js": "^7.20.3"
   }
 }
